@@ -60,68 +60,3 @@ seahorse_check_button_gconf_attach  (GtkCheckButton *check, const char *gconf_ke
     g_return_if_fail (entry != NULL);
     gconf_notify (NULL, 0, entry, check);
 }
-
-/* -------------------------------------------------------------------------- */
-
-enum {
-    PROP_0,
-    PROP_GCONF_KEY
-};
-
-G_DEFINE_TYPE (SeahorseCheckButtonControl, seahorse_check_button_control, 
-               GTK_TYPE_CHECK_BUTTON);
-
-static void
-seahorse_check_button_control_init (SeahorseCheckButtonControl *ctl)
-{
-    
-}
-
-static void
-seahorse_check_button_control_set_property (GObject *object, guint prop_id,
-                                            const GValue *value, GParamSpec *pspec)
-{
-    SeahorseCheckButtonControl *control = SEAHORSE_CHECK_BUTTON_CONTROL (object);
-
-    switch (prop_id) {
-    case PROP_GCONF_KEY:
-        seahorse_check_button_gconf_attach (GTK_CHECK_BUTTON (control), g_value_get_string (value));
-        break;
-    }
-}
-
-static void
-seahorse_check_button_control_get_property (GObject *object, guint prop_id,
-                                            GValue *value, GParamSpec *pspec)
-{
-    SeahorseCheckButtonControl *control = SEAHORSE_CHECK_BUTTON_CONTROL (object);
-    
-    switch (prop_id) {
-    case PROP_GCONF_KEY:
-        g_value_set_string (value, g_object_get_data (G_OBJECT (control), "gconf-key"));
-        break;
-    }
-}
-
-static void
-seahorse_check_button_control_class_init (SeahorseCheckButtonControlClass *klass)
-{
-    GObjectClass *gclass;
-    
-    seahorse_check_button_control_parent_class = g_type_class_peek_parent (klass);
-    
-    gclass = G_OBJECT_CLASS (klass);
-    gclass->set_property = seahorse_check_button_control_set_property;
-    gclass->get_property = seahorse_check_button_control_get_property;
-    
-    g_object_class_install_property (gclass, PROP_GCONF_KEY,
-                g_param_spec_string ("gconf_key", "GConf Key", "GConf Key to listen to",
-                                     "", G_PARAM_READWRITE));
-}
-
-GtkWidget*
-seahorse_check_button_control_new (const gchar *label, const gchar *gconf_key)
-{
-    return g_object_new (SEAHORSE_TYPE_CHECK_BUTTON_CONTROL, "label", label,
-                         "use_underline", TRUE, "gconf_key", gconf_key, NULL);
-}
