@@ -18,44 +18,13 @@
  * 59 Temple Place, Suite 330,
  * Boston, MA 02111-1307, USA.
  */
-
-/** 
- * SeahorseCheckButtonControl: A checkbox widget which is tied to a 
- * boolean gconf key. 
- *
- * - Derived from GtkCheckButton.
- *
- * Properties:
- *   gconf-key: (gchar*) The GConf key to set and monitor.
- */
  
 #ifndef __SEAHORSE_CHECK_BUTTON_CONTROL_H__
 #define __SEAHORSE_CHECK_BUTTON_CONTROL_H__
 
 #include <gtk/gtk.h>
 
-#define SEAHORSE_TYPE_CHECK_BUTTON_CONTROL              (seahorse_check_button_control_get_type ())
-#define SEAHORSE_CHECK_BUTTON_CONTROL(obj)              (GTK_CHECK_CAST ((obj), SEAHORSE_TYPE_CHECK_BUTTON_CONTROL, SeahorseCheckButtonControl))
-#define SEAHORSE_CHECK_BUTTON_CONTROL_CLASS(klass)      (GTK_CHECK_CLASS_CAST ((klass), SEAHORSE_TYPE_CHECK_BUTTON_CONTROL, SeahorseCheckButtonControlClass))
-#define SEAHORSE_IS_CHECK_BUTTON_CONTROL(obj)           (GTK_CHECK_TYPE ((obj), SEAHORSE_TYPE_CHECK_BUTTON_CONTROL))
-#define SEAHORSE_IS_CHECK_BUTTON_CONTROL_CLASS(klass)   (GTK_CHECK_CLASS_TYPE ((klass), SEAHORSE_TYPE_CHECK_BUTTON_CONTROL))
-#define SEAHORSE_CHECK_BUTTON_CONTROL_GET_CLASS(obj)    (GTK_CHECK_GET_CLASS ((obj), SEAHORSE_TYPE_CHECK_BUTTON_CONTROL, SeahorseCheckButtonControlClass))
-
-typedef struct _SeahorseCheckButtonControl SeahorseCheckButtonControl;
-typedef struct _SeahorseCheckButtonControlClass SeahorseCheckButtonControlClass;
-
-struct _SeahorseCheckButtonControl {
-    GtkCheckButton parent;
-};
-
-struct _SeahorseCheckButtonControlClass {
-    GtkCheckButtonClass parent_class;
-};
-
-GtkWidget*  seahorse_check_button_control_new       (const gchar *label,
-                                                     const gchar *gconf_key);
-
-/* A new API for dealing with elsewhere created widgets */
+/* An API for dealing with elsewhere created widgets */
 
 void        seahorse_check_button_gconf_attach      (GtkCheckButton *button,
                                                      const char *gconf_key);
