@@ -1,3 +1,13 @@
+2006-05-24  Adam Schreiber  <sadam@clemson.edu>
+
+    * agent/seahorse-agent-prompt.c:
+    * libseahorse/seahorse-check-button-control.c:
+    * libseahorse/seahorse-check-button-control.h:
+    * libseahorse/seahorse-prefs.c:
+    * libseahorse/seahorse-prefs.glade:
+    * src/seahorse-preferences.c: Remove deprecated 
+    seahorse_check_button_control_new. Bug #338743 
+
 2006-05-18  Adam Schreiber  <sadam@clemson.edu>
     
     * src/seahorse-generate-select.c: Make dialog activate
